# ChangeLog for app-misc/bookcase
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/bookcase/Attic/ChangeLog,v 1.4 2004/02/29 17:19:59 aliz Exp $

  07 Jan 2004; Jon Portnoy <avenj@gentoo.org> :
  AMD64 keywords.

*bookcase-0.7.2 (30 Nov 2003)

  30 Nov 2003; Caleb Tennis <caleb@gentoo.org> :
  Version bump

*bookcase-0.6.4 (08 Sep 2003)

    08 Sep 2003; Jon Portnoy <avenj@gentoo.org> bookcase-0.6.4.ebuild :
    Initial import. Submitted in bug 24411 by Gerrit M. Albrecht 
    <gentoo.org@gerrit-albrecht.de>.