@@ -1,6 +1,8 @@
+MD5 97285dd02395287b81b68f57a4a84123 ChangeLog 583
 MD5 4a6305c35424838d7da9d57aebfed522 bookcase-0.6.4.ebuild 516
 MD5 3a924e2dfa6e9161962bb7c5d6e0eb1c bookcase-0.7.2.ebuild 511
-MD5 97285dd02395287b81b68f57a4a84123 ChangeLog 583
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
+MD5 31e55961b61b82b6a434b734f155445a bookcase-0.8.5.ebuild 1039
 MD5 edc430e3841c42044fad11c9cd5a0959 files/digest-bookcase-0.6.4 66
 MD5 84d75ecb6d74dbfec93189d5aa212b4b files/digest-bookcase-0.7.2 67
+MD5 11fdde1e2db7871469f43029df88ed28 files/digest-bookcase-0.8.5 67
