@@ -1,0 +1,1 @@
+MD5 82e0c1909c23d7736547f5f00b7e5f30 bookcase-0.8.5.tar.gz 1410447
