@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/bookcase
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/bookcase/Attic/ChangeLog,v 1.4 2004/02/29 17:19:59 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/bookcase/Attic/ChangeLog,v 1.5 2004/03/13 19:15:06 centic Exp $
+
+*bookcase-0.8.5 (13 Mar 2004)
+
+  13 Mar 2004; Dominik Stadler <centic@gentoo.org> bookcase-0.8.5.ebuild:
+  Add Version 0.8.5, thanks to Christof Debaes <christof.debaes@vub.ac.be> and
+  Robert Cole <robert.cole@support4linux.com>, Bug 40875
 
   07 Jan 2004; Jon Portnoy <avenj@gentoo.org> :
   AMD64 keywords.
